fix images with too big height

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -20,3 +20,7 @@
 .book-offer-image {
   max-height: 3em;
 }
+
+.card-img-left {
+  max-height: 15em;
+}
